<resources>
    <string name="app_name">iTube App</string>
    <string name="password">password:</string>
    <string name="username">username:</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create account</string>
    <string name="pass_confirm">Confirm password:</string>
    <string name="youtube_url">Youtube URL:</string>
    <string name="play">PLAY</string>
    <string name="add_to_playlist">ADD TO PLAYLIST</string>
    <string name="my_playlist">MY PLAYLIST</string>

</resources>