<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/youtubeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:paddingLeft="20dp"
        android:text="@string/youtube_url"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="115dp" />

    <EditText
        android:id="@+id/urlEdit"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="346dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_text_border"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlEdit" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="346dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/button_text_border"
        android:text="@string/add_to_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <Button
        android:id="@+id/listBtn"
        android:layout_width="346dp"
        android:layout_height="52dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_text_border"
        android:text="@string/my_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>