<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userText" />

    <EditText
        android:id="@+id/passeditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passText"
        app:layout_constraintTop_toBottomOf="@+id/usereditText" />

    <EditText
        android:id="@+id/usereditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/userText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/button_text_border"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passeditText" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/button_text_border"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>