<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/fullnameText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameText" />

    <EditText
        android:id="@+id/pass1Text"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <EditText
        android:id="@+id/pass1confirmText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/pass_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1Text" />



    <Button
        android:id="@+id/addBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button_text_border"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1confirmText" />
</androidx.constraintlayout.widget.ConstraintLayout>